Fixed Segfault Error

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"launchOptionType": "Local",
 			"miDebuggerPath": "/usr/bin/gdb",
 			"targetArchitecture": "x64",
-			"program": "enter program name, for example ${workspaceRoot}/a.out",
+			"program": "${workspaceRoot}/simulation",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceRoot}",
@@ -21,7 +21,7 @@
 			"launchOptionType": "Local",
 			"miDebuggerPath": "/usr/bin/gdb",
 			"targetArchitecture": "x64",
-			"program": "enter program name, for example ${workspaceRoot}/a.out",
+			"program": "${workspaceRoot}/simulation",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceRoot}",
